# ai-swagger-bot

./: .bandit  .coveragerc  .cursorrules  .env.example  .flake8  .gitignore  .gitignore.serverless  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  ADMIN_GUIDE.md  API_DOCUMENTATION.md  API_PROXY_ARCHITECTURE.md  CHANGELOG.md  CHROMADB_POSTGRESQL_ANALYSIS.md  CLICKONE_SHOP_API_SUMMARY.md  CLI_README.md  CLI_SUMMARY.md  CODE_OF_CONDUCT.md  COMMANDS_REFERENCE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.api  Dockerfile.cli  Dockerfile.lambda  Dockerfile.test  ENHANCED_FEATURES_SUMMARY.md  FINAL_SUMMARY.md  INSTALL_SERVERLESS.md  LICENSE  MIGRATIONS.md  Makefile  Makefile.lambda  README.md  README_AI_ERROR_HANDLER.md  README_ENV_SETUP.md  README_SERVERLESS.md  README_USER_ISOLATION.md  REAL_TESTING_README.md  REFACTORING_SUMMARY.md  (+44 more)
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
alembic/: env.py
api/: admin.py  admin_ui.py  auth.py  database.py  main.py  models.py  prompts.py  queue_manager.py  tokens.py  users.py
api-service/: Dockerfile  package-lock.json  package.json  server.js
config/: .flake8  README.md  prompt_config.json  pytest.ini  requirements-dev.txt  requirements.txt
database/: README.md  init-real-db.sql
demos/: README.md  demo_ai_bot.py  demo_ai_interactive.py  demo_ai_simple.py  demo_ai_working.py  demo_cli.py  demo_clickone_service.py  demo_streamlit.py
deployment/: README.md  env.serverless.example  lambda_handler.py  package.json  serverless.yml  test-event.json
docs/: AI_SWAGGER_BOT_ALGORITHM.md  ALGORITHM_FLOWCHART.md  API_RESPONSE_PROCESSING.md  CHAT_SESSION_DEBUGGING.md  DEMO_EXAMPLES.md  DOCKER_GUIDE.md  DYNAMIC_PROMPTS_README.md  ENHANCED_AI_ASSISTANT_GUIDE.md  ENHANCED_PROMPTS_GUIDE.md  GPT_PROMPTS_SUMMARY.md  GPT_PROMPT_GENERATION_GUIDE.md  INTEGRATION_TESTS_GUIDE.md  OBJECT_CREATION_GUIDE.md  POSTGRESQL_MIGRATION_GUIDE.md  QUERY_GUIDE.md  QUICK_REFERENCE.md  RAG_ANSWERS_SUMMARY.md  RAG_SYSTEM_ANALYSIS.md  README_AGENTS.md  SECURITY_REPORT.md  SECURITY_SETUP.md  USER_GUIDE.md  USER_ISOLATION_ARCHITECTURE.md  YAML_PROMPTS_GUIDE.md  YAML_PROMPTS_MIGRATION.md
examples/: api_response_processing_example.py  basic_usage.py  clickone_shop_demo.py  enhanced_ai_assistant_example.py  enhanced_prompt_usage.py  gpt_prompt_generation_example.py  object_creation_example.py  prompts_export_example.yaml  serverless_example.py  usage_scenarios.md  yaml_prompts_example.py
frontend/: README.md  demo_client.html
prompts/: base_prompts.yaml  clickone_shop_api_prompts.yaml
scripts/: README_DB_MANAGEMENT.md  analyze_chroma_db.py  cleanup_duplicates.py  clear_chroma_db.py  create_admin.py  create_demo_user.py  create_postgres_tables.py  create_tables.py  debug_sessions.py  demo_user_isolation.py  fresh_start.sh  load_base_prompts.py  migrate_to_pgvector.py  migrate_to_postgres.py  migrate_to_user_embeddings.py  quick_start.py  reindex_swagger.py  remove_sqlite.py  run_enhanced_chat.sh  run_integration_tests.sh  setup_serverless.sh  start_postgres.sh  test_frontend_auth.py  view_vectors.py
src/: __init__.py  ai_error_demo.py  ai_error_handler.py  clickone_prompt_manager.py  clickone_shop_agent.py  clickone_swagger_service.py  config.py  dynamic_prompt_manager.py  enhanced_ai_assistant.py  enhanced_prompt_manager.py  enhanced_rag_engine.py  enhanced_swagger_parser.py  gpt_prompt_generator.py  interactive_api_agent.py  postgres_prompt_manager.py  postgres_vector_manager.py  prompt_descriptions.py  prompt_templates.py  rag_engine.py  swagger_error_handler.py  swagger_prompt_generator.py  swagger_validation_prompt.py  token_manager.py  yaml_prompt_manager.py
terraform/: Makefile  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: README.md  conftest.py  test_admin_filters.py  (+39 more)
(+59 files in other folders)
